# openchrome

./: .e2e-state.json  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.test.json
.claude/commands/: release-oc.md
.github/workflows/: desktop-release.yml  e2e.yml
.ouroboros/seeds/: cross-env-compatibility.yaml
cli/: index.ts  mcp-client-config.ts  totp-store.ts
deploy/docker/: .dockerignore  Dockerfile  docker-compose.yml
deploy/pm2/: ecosystem.config.js
deploy/systemd/: openchrome.env  openchrome.service
desktop/: .gitignore  RELEASING.md  index.html  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: build-sidecar.js  check-update-endpoint.js  generate-update-manifest.js
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json  updater.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs  profiles.rs  settings.rs  sidecar.rs  tunnel.rs
docs/: turnstile-guide.md
docs/experiments/: validation-plan.md
docs/roadmap/: e2e-certification-criteria.md  implementation-plan.md  issue-reliability-guarantee.md  issue-reliability-tracking.md
scripts/: download-cloudflared.js
src/: index.ts  mcp-server.ts  self-healing.ts  session-manager.ts  session-state-persistence.ts
src/actions/: action-cache.ts  action-parser.ts  action-templates.ts
src/auth/: credential-provider.ts  credential-store.ts  (+3 more)
tests/: mcp-server-shutdown.test.ts  mcp-server.test.ts  session-state-persistence.test.ts
(+297 files in other folders)
