[package]
name = "openchrome-desktop"
version = "0.1.0"
edition = "2021"
description = "OpenChrome Desktop Application"

[lib]
name = "openchrome_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync", "time"] }
getrandom = "0.2"
